--- a/style.css
+++ b/style.css
@@ -1,20 +1,5 @@
-/* * {
-margin: 0.7%;
-padding-left: 5%;
-} */
-/* #canv{
-    background: rgb(199, 197, 197);
-    position: fixed;
-    top:0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin:auto;
-    padding: auto;
-    border:3.7px solid black;
-    width: 70%;
-    height: 87%;
-} */
-
-
+ *{
+margin-left: 3px;
+margin-top: 3px;
+} 
    
